# pearl-proof

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Expr.cpp  Expr.h  PearlProof.g4  PearlProofVisitor.cpp  PearlProofVisitor.h  README.md  comprehensive_test.proof  invalid_denominator.proof  main.cpp  test1.proof  test2.proof  test3.proof  test_all_requirements.proof  test_errors.proof  test_exponent_assoc.proof  test_negation.proof  test_negative_exponents.proof  test_rational.proof  test_rational_fail.proof  test_requirements.proof  test_unary_extended.proof  test_unary_minus.proof
.github/workflows/: ci.yml
server/: index.js  package.json
